# boring-rustls-provider

./: .gitignore  Cargo.toml  Makefile  Readme.md
.github/workflows/: ci.yml
boring-additions/: Cargo.toml
boring-additions/src/: helper.rs  lib.rs
boring-additions/src/aead/: mod.rs  types.rs
boring-additions/src/evp/: types.rs
boring-additions/src/hmac/: types.rs
boring-rustls-provider/: Cargo.toml
boring-rustls-provider/src/: aead.rs  hash.rs  helper.rs  hkdf.rs  hmac.rs  kx.rs  lib.rs  prf.rs  sign.rs  tls12.rs  tls13.rs  verify.rs
boring-rustls-provider/src/aead/: aes.rs  chacha20.rs
boring-rustls-provider/src/kx/: dh.rs  evp.rs  ex.rs  mod.rs
boring-rustls-provider/src/verify/: ec.rs  ed.rs  rsa.rs
boring-rustls-provider/tests/: e2e.rs  panic_surface.rs
boring-sys-additions/: Cargo.toml
boring-sys-additions/src/: lib.rs
examples/: Cargo.toml  client.rs
src/: aead.rs  hash.rs  hkdf.rs  hmac.rs  lib.rs  prf.rs  sign.rs  tls12.rs  tls13.rs  verify.rs
src/aead/: aes.rs  chacha20.rs
src/kx/: ex.rs  mod.rs  pq.rs
src/verify/: ec.rs  ed.rs  rsa.rs
tests/: e2e.rs  panic_surface.rs
