[workspace]
members = [
  # things that should probably be in boring crate
  "boring-additions",
  # things that should probably be in boring-sys crate
  "boring-sys-additions",
  # the main library and tests
  "boring-rustls-provider",
  # tests and example code
  "examples",
]
default-members = [
  "examples",
  "boring-rustls-provider",
]

resolver = "2"

[workspace.dependencies]
boring = { version = "4", default-features = false }
boring-sys = { version = "4", default-features = false }
rustls = { version = "0.23", default-features = false }
rustls-pemfile = { version = "2" }
rustls-pki-types = { version = "1" }
tokio-rustls = { version = "0.26", default-features = false  }
webpki = { package = "rustls-webpki", version = "0.102", default-features = false }
webpki-roots = { version = "0.26" }
