[package]
name = "boring-rustls-provider"
version = "5.0.0"
authors = ["Jan Rüth <boring-rustls-provider@djiehmail.com>"]
edition = "2024"
license = "MIT"
description = "A BoringSSL-based rustls crypto provider with optional FIPS and post-quantum support"
repository = "https://github.com/janrueth/boring-rustls-provider"
readme = "Readme.md"
keywords = ["tls", "rustls", "boringssl", "crypto", "fips"]
categories = ["cryptography", "network-programming"]

[features]
default = []

# Build against a FIPS-validated version of BoringSSL and restrict the
# provider to FIPS-approved algorithms only. This affects:
#   - Cipher suites: AES-GCM only (no ChaCha20-Poly1305).
#   - Key exchange groups: X25519MLKEM768 (preferred), P-256, and P-384
#     only (no X25519, X448, P-521, or FFDHE).
#   - Signature algorithms: RSA PKCS#1 / PSS and ECDSA with P-256/P-384
#     only (no P-521, Ed25519, or Ed448).
# Implies `mlkem` to ensure the post-quantum hybrid group is available.
# Aligned with boring's `fips202205` compliance policy (SP 800-52r2).
fips = ["boring/fips", "mlkem"]

# Enable X25519MLKEM768 post-quantum hybrid key exchange group
# (draft-ietf-tls-ecdhe-mlkem-00). Uses ML-KEM-768 (FIPS 203) combined
# with X25519 for hybrid post-quantum/classical key agreement.
mlkem = ["boring/mlkem"]

# Deprecated alias for `fips`. Matches the boring crate's feature name
# for backwards compatibility.
fips-precompiled = ["fips"]

# Enable TLS 1.2 cipher suites (ECDHE-ECDSA and ECDHE-RSA with AES-GCM
# and ChaCha20-Poly1305). Without this feature only TLS 1.3 is available.
tls12 = ["rustls/tls12", "boring/prf"]

# Enable debug logging of BoringSSL errors and provider internals via
# the `log` crate. Useful for diagnosing handshake failures.
logging = ["log"]

[dependencies]
aead = { version = "0.5", default-features = false, features = ["alloc"] }
boring = { version = ">=5.1, <6", default-features = false }
boring-sys = { version = ">=5.1, <6", default-features = false }
foreign-types = "0.5"
log = { version = "0.4.4", optional = true }
rustls = { version = "0.23", default-features = false }
rustls-pki-types = { version = "1" }
spki = "0.7"
zeroize = "1"

[dev-dependencies]
env_logger = "0.11"
hex-literal = "1"
rcgen = "0.12"
rustls = { version = "0.23", features = ["std", "logging"] }
tokio = { version = "1.34", features = ["macros", "rt", "net", "io-util", "io-std"] }
tokio-rustls = { version = "0.26", default-features = false }
webpki-roots = { version = "1.0" }

[[example]]
name = "client"
required-features = ["logging"]

[package.metadata.docs.rs]
features = ["logging", "tls12", "mlkem"]
