[package]
name = "boring-rustls-provider-examples"
version = "0.0.1"
edition = "2021"
license = "MIT"
description = "Boring Rustls provider example code and tests."
publish = false

[dependencies]
env_logger = "0.11"
rustls = { workspace = true, features = [ "logging", "std" ]}
boring-rustls-provider = { path = "../boring-rustls-provider", features = ["logging"] }
webpki-roots = { workspace = true }
